kubernetes/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: cloudstream

spec:
  selector:
    app: backend

  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080

  type: NodePort
