kubernetes/minio-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: minio
  namespace: cloudstream

spec:
  selector:
    app: minio

  type: ClusterIP

  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9000

    - name: console
      protocol: TCP
      port: 9001
      targetPort: 9001
