kubernetes/cloudstream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudstream-ingress
  namespace: cloudstream
spec:
  ingressClassName: nginx

  rules:
  - host: cloudstream.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
